test/tests/compiler/18_structures/invalid_types/invalid_struct_declaration/void_member.plx
type struc s(    #  can't declare structure members with incomplete type, including void
    x: none    )
